fix(readme): Edit artifactId

--- a/README.adoc
+++ b/README.adoc
@@ -17,7 +17,7 @@ With default options
 [source,console]
 ----
 mvn -U org.openrewrite.maven:rewrite-maven-plugin:run \
--Drewrite.recipeArtifactCoordinates=io.github.jtama:app-graph-generator:1.0.1-SNAPSHOT \
+-Drewrite.recipeArtifactCoordinates=io.github.jtama:project-graph-generator:1.0.0 \
 -Drewrite.activeRecipes=io.github.jtama.openrewrite.ProjectAerialViewGenerator
 ----
 
@@ -26,7 +26,7 @@ With full options
 [source,console]
 ----
 mvn -U org.openrewrite.maven:rewrite-maven-plugin:run \
--Drewrite.recipeArtifactCoordinates=io.github.jtama:app-graph-generator:1.0.1-SNAPSHOT \
+-Drewrite.recipeArtifactCoordinates=io.github.jtama:project-graph-generator:1.0.0 \
 -Drewrite.activeRecipes=io.github.jtama.openrewrite.ProjectAerialViewGenerator \
 -Drewrite.options=maxNodes=8,basePackages=com.foo
 ----
